--- a/index.html
+++ b/index.html
@@ -30,9 +30,16 @@
             font-size: 30px;
             margin: 10px 0;
         }
+        img{
+            width: 200px;
+        }
     </style>
 </head>
 <body>
+
+    <div class="image">
+        <img src="./img/profile.png" alt="">
+    </div>
     <div class="message">
         <h1>🎉 Happy 19th Birthday, Perry Timinah! 🎉</h1>
         <p>Wishing a fantastic day to someone who is not only a year older but also a year smarter! Perry, your intelligence shines brightly in everything you do. Your ability to grasp complex concepts and think critically is truly inspiring. As you step into this new chapter of your life, may your wisdom continue to grow, and may you achieve all the remarkable things you've set your mind to.</p>
