--- a/index.html
+++ b/index.html
@@ -1,52 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Birthday, Perry Timinah!</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f0f0f0;
-            text-align: center;
-            padding: 2rem;
-        }
-        .message {
-            background-color: #ffd700;
-            border-radius: 10px;
-            padding: 20px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            color: #ff69b4;
-        }
-        p {
-            font-size: 18px;
-            line-height: 1.5;
-            margin: 0;
-            padding: 10px 0;
-        }
-        .emoji {
-            font-size: 30px;
-            margin: 10px 0;
-        }
-        img{
-            width: 200px;
-        }
-    </style>
-</head>
-<body>
-
-    <div class="image">
-        <img src="./img/profile.png" alt="">
-    </div>
-    <div class="message">
-        <h1>🎉 Happy 19th Birthday, Perry Timinah! 🎉</h1>
-        <p>Wishing a fantastic day to someone who is not only a year older but also a year smarter! Perry, your intelligence shines brightly in everything you do. Your ability to grasp complex concepts and think critically is truly inspiring. As you step into this new chapter of your life, may your wisdom continue to grow, and may you achieve all the remarkable things you've set your mind to.</p>
-        <p>Ah, indecision, thy faithful companion! 😄 Perry, your knack for being indecisive just adds to your charm. It's a trait that keeps us all on our toes, wondering what delightful surprises you'll come up with next. But you know what? That's part of what makes you so unique and lovable. Embrace your quirks, for they make you who you are, and we wouldn't have it any other way.</p>
-        <p>As you celebrate your 19th birthday, remember that every day is a chance to learn, to grow, and to laugh at the quirks that make us human. May this year be filled with clarity amidst indecision, breakthroughs amidst stubbornness, and an abundance of joy. Here's to embracing your journey and making the most out of every moment.</p>
-        <p>Have an absolutely amazing day! Enjoy the company of your friends and celebrate responsibly. Cheers to being 19 and fabulous! 🎂🎈🎁</p>
-        <p>Warmest wishes, <br>Joshua</p>
-    </div>
-</body>
-</html>
+NADA
